feat(cloudflare): implement Spotify API proxy worker (T026-T031)
- Create worker directory structure with TypeScript types
- Implement Spotify token exchange with 55min cache
- Implement track API endpoint with validation
- Add Worker entry point with routing and CORS
- Update wrangler.jsonc to use worker/index.ts
- Install @cloudflare/workers-types and update tsconfig
- Fix existing TypeScript errors in test mocks

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -5,10 +5,14 @@
   "name": "spotify-youtube-hits",
   "compatibility_date": "2025-11-09",
 
+  // Worker entry point with custom logic
+  "main": "worker/index.ts",
+
   // Workers Assets configuration
   // Serves static files from the dist/ directory with SPA routing support
   "assets": {
     "directory": "./dist",
+    "binding": "ASSETS",
     "not_found_handling": "single-page-application"
   }
 }
