--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20251111.0",
     "@eslint/js": "^9.37.0",
     "@playwright/test": "^1.56.0",
     "@tailwindcss/vite": "^4.1.14",
