--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "types": ["@cloudflare/workers-types"],
     "module": "ESNext",
     "skipLibCheck": true,
 
@@ -25,6 +26,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "tests"],
+  "include": ["src", "worker", "tests"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
