--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-react-refresh": "^0.4.23",
     "globals": "^16.4.0",
     "jsdom": "^27.0.0",
+    "shadcn": "^3.5.0",
     "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.0",
